# components/fun-app/docs/swagger.json
@@ -5,6 +5,47 @@
     },
     "paths": {
         "/person": {
+            "get": {
+                "description": "List Person and Optionally Search",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Person"
+                ],
+                "summary": "List Person and Search",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Filter persons by gender",
+                        "name": "gender",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Filter persons by age",
+                        "name": "age",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/server.PersonList"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Create a new person with the provided data",
                 "consumes": [
@@ -30,47 +71,15 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Id of created person",
                         "schema": {
-                            "$ref": "#/definitions/server.PersonRequest"
+                            "type": "string"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/person/all": {
-            "get": {
-                "description": "Get all persons' details",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Person"
-                ],
-                "summary": "Get all persons",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/db.Person"
-                            }
                         }
                     },
                     "500": {
@@ -173,7 +182,9 @@
             ],
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 150,
+                    "minimum": 1
                 },
                 "gender": {
                     "type": "string",
@@ -182,8 +193,29 @@
                         "FEMALE"
                     ]
                 },
-                "name": {
+                "id": {
+                    "description": "Validations - https://gin-gonic.com/docs/examples/binding-and-validation/",
                     "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 25,
+                    "minLength": 1
+                }
+            }
+        },
+        "server.PersonList": {
+            "type": "object",
+            "properties": {
+                "records": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/db.Person"
+                    }
+                },
+                "total": {
+                    "description": "Pagination - https://dev.to/pragativerma18/unlocking-the-power-of-api-pagination-best-practices-and-strategies-4b49",
+                    "type": "integer"
                 }
             }
         },
@@ -196,7 +228,9 @@
             ],
             "properties": {
                 "age": {
-                    "type": "integer"
+                    "type": "integer",
+                    "maximum": 150,
+                    "minimum": 1
                 },
                 "gender": {
                     "type": "string",
@@ -205,8 +239,14 @@
                         "FEMALE"
                     ]
                 },
-                "name": {
+                "id": {
+                    "description": "Validations - https://gin-gonic.com/docs/examples/binding-and-validation/",
                     "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 25,
+                    "minLength": 1
                 }
             }
         }
